--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="ETHBerlin³"
+      content="ETHBerlin^3"
     />
-    <title>ETHBerlin³</title>
+    <title>ETHBerlin^3</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
