and another one

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="ETHBerlin^3"
     />
-    <title>ETHBerlin^3</title>
+    <title>ETHBerlin&Hat;3</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
