--- a/public/index.html
+++ b/public/index.html
@@ -7,12 +7,12 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="ETHBerlin^3"
+      content="ETHBerlin³"
     />
-    <title>ETHBerlin&Hat;3</title>
+    <title>ETHBerlin³</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>Unfortunately, you need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
 </html>
