--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,12 @@
     <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@ETHBerlin">
+    <meta name="twitter:creator" content="@ETHBerlin">
+    <meta name="twitter:title" content="ETHBerlin³">
+    <meta name="twitter:description" content="ETHBerlin, to the power of 3. September 16-18, 2022, Factory Görlitzer Park, Berlin.">
+    <meta name="twitter:image" content="https://ethberlin.ooo/card.png">
     <meta
       name="description"
       content="ETHBerlin³"
